# drawStrokesDemo

./: .gitignore  BezierQ&A.md  README.md  TECH_ARCHITECTURE.md  TECH_SELECTION_STROKE_SMOOTH_ZOOM.md  settings.gradle.kts
.trae/rules/: project_rules.md
app/: build.gradle.kts
app/build4/outputs/logs/: manifest-merger-debug-report.txt
app/build5/intermediates/incremental/lintAnalyzeDebug/: debug-artifact-dependencies.xml  debug.xml
app/build5/intermediates/incremental/lintAnalyzeDebugAndroidTest/: debug-artifact-libraries.xml  debug.xml
app/build5/intermediates/incremental/lintAnalyzeDebugUnitTest/: debug-artifact-dependencies.xml  debug-artifact-libraries.xml  debug.xml
app/build5/intermediates/incremental/mergeDebugAssets/: merger.xml
app/build5/intermediates/incremental/mergeDebugJniLibFolders/: merger.xml
app/build5/reports/: lint-results-debug.html  lint-results-debug.xml
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp  stroke_counter.cpp
gradle/wrapper/: gradle-wrapper.properties
helloword/.obsidian/: workspace.json
openspec/changes/bezier-double-fit-canvas-screen/: design.md  proposal.md  tasks.md
openspec/changes/bezier-double-fit-canvas-screen/specs/: requirements.md
openspec/changes/realtime-writing-stick-to-raw/: design.md  proposal.md  tasks.md
openspec/changes/realtime-writing-stick-to-raw/specs/: requirements.md
openspec/changes/stroke-jank-under-video-share/: design.md  proposal.md  tasks.md
openspec/changes/stroke-jank-under-video-share/specs/: requirements.md
(+191 files in other folders)
